--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,10 +1,11 @@
 version: 2.1
 
 commands:
-  destroy_environment:
+  destroy_environment_on_fail:
     steps:
       - run:
           name: Destroy environment
+          when: on_fail
           command: |
             aws cloudformation delete-stack --stack-name prod-${CIRCLE_WORKFLOW_ID}
 
@@ -21,8 +22,7 @@ jobs:
               --template-file template.yml \
               --stack-name prod-${CIRCLE_WORKFLOW_ID}
       - run: return 1
-      - destroy_environment
-          when: on_fail
+      - destroy_environment_of_fail
 
 workflows:
   my_workflow:
