add code that will fail

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,7 +21,7 @@ jobs:
             aws cloudformation deploy \
               --template-file template.yml \
               --stack-name prod-${CIRCLE_WORKFLOW_ID}
-      - run: return 1
+      - run: blah
       - destroy_environment_on_fail
 
 workflows:
